# VCA

./: .gitignore  CMakeLists.txt  Makefile.inc  README.md  TEST.txt  VCA.f90  VCA_AUX_FUNX.f90  VCA_BATH_FUNCTIONS.f90  VCA_BATH_SETUP.f90  VCA_DIAG.f90  VCA_EIGENSPACE.f90  VCA_GF_NORMAL.f90  VCA_GF_SHARED.f90  VCA_GREENS_FUNCTIONS.f90  VCA_HAMILTONIAN.f90  VCA_HAMILTONIAN_COMMON.f90  VCA_HAMILTONIAN_DIRECT_HxV.f90  VCA_HAMILTONIAN_MATVEC.f90  VCA_HAMILTONIAN_SPARSE_HxV.f90  VCA_INPUT_VARS.f90  VCA_IO.f90  VCA_MAIN.f90  VCA_OBSERVABLES.f90  VCA_OMEGA.f90  VCA_QMATRIX.f90  VCA_SETUP.f90  VCA_SPARSE_MATRIX.f90  VCA_VARS_GLOBAL.f90  vca_Hbath.f90  vca_Hcluster.f90  vca_Hhyb_bath.f90  vca_Hint.f90  vca_full_gf_normal.f90  vca_lanc_gf_normal.f90
.repo/: VCA_INPUT_VARS.f90  VCA_QMATRIX.f90
VCA_HAMILTONIAN/: diag_hybr_bath.f90  vca_Hhyb_bath.f90
VCA_HAMILTONIAN/direct/: HxV_dw.f90  HxV_local.f90  HxV_up.f90
VCA_HAMILTONIAN/direct_mpi/: HxV_dw.f90  HxV_local.f90  HxV_up.f90
VCA_HAMILTONIAN/stored/: H_cluster_dw.f90  H_cluster_local.f90  H_cluster_up.f90  SFT_potential_varying_epsilon.vca
VCA_IO/: get_dens.f90  get_docc.f90  get_doubles.f90  get_eimp.f90  get_gimp_matsubara.f90  get_gimp_realaxis.f90  get_imp_dm.f90  get_mag.f90  get_sft_potential.f90  get_sigma_matsubara.f90  get_sigma_realaxis.f90  gf_cluster.f90
cmake/Modules/: FindMKL.cmake
drivers/: fed_hm_bethe.f90  vca_bhz_2d.f90  vca_bhz_2d_bath.f90  vca_bhz_2d_multi.f90  vca_bhz_2d_old.f90  vca_bhz_bath.f90  vca_bhz_bath_little.f90  vca_bhz_bath_old.f90  vca_bhz_brent.f90  vca_bhz_postprocessing.f90  vca_chain1d.f90  vca_chain_bath.f90  vca_hm_2dsquare.f90  vca_hm_2dsquare_bath.f90  vca_hm_chain1d.f90  vca_hm_chain1d_bath.f90  vca_hm_dimer.f90  vca_mannaggia.f90  vca_retrieve_periodize.f90  vca_square_bath.f90  vca_square_bath_2sites.f90  vca_square_bath_periodized.f90  vca_square_lattice.f90  vca_ssh.f90  vca_ssh_extended.f90  vca_test.f90  vca_test_old.f90
old/: vca_full_gf_normal.f90
